--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,20 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Destiny II Gaming Analytics </h3>
+    <ul>
+      <li> Featured Skills</li>
+    </ul>
+    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <a class="project-link" href="#">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Project II </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
@@ -19,7 +32,7 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Project III </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
