--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,11 +28,24 @@
   </div>
 </div>
 <div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Project III </h3>
+    <ul>
+      <li> Featured Skills</li>
+    </ul>
+    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <a class="project-link" href="#">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project III </h3>
+    <h3> Project IV </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
