--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Destiny-2-1080P-Wallpaper.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Destiny II Gaming Analytics </h3>
@@ -16,7 +16,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Labor_Market-1.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Project II </h3>
