--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,27 +4,24 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
+      <h2>Programming</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Python, R, Java, C++ </p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Machine Learning</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Supervised Learning, Unsupervised Learning</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>AWS, Tableau, Hadoop, Spark, Hive</p>
     </div>
 </div>
