--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,8 @@
   <div class="user">
     <div class="tech">
       <h2>Programming</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
       <i class="devicon-python-plain colored"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
