--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,8 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:vincent_ziwen@outlook.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/ziwen-wang/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My Facebook" target="_blank" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/ziwen-wang/"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/vincent9514"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         
       </div>
       <div class="header-links">
