--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> Featured Skills</li>
     </ul>
     <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
-    <a class="project-link" href="project_1.html">Check it out</a>
+    <a class="project-link" href="work2.html">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
