--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> Featured Skills</li>
     </ul>
     <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
-    <a class="project-link" href="work2.html">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -24,7 +24,7 @@
       <li> Featured Skills</li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="work.html">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
