--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,10 +7,11 @@
       <h2>Programming</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-java-plain-wordmark colored"></i>
-      <i class="devicon-python-plain colored"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Python, R, Java, C++ </p>
+      <i class="devicon-cplusplus-plain colored"></i>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
+      <p>Python, R, SQL, Java, C++, Javascript, Html </p>
+        
     </div>
     <div class="tech">
       <h2>Machine Learning</h2>
@@ -19,11 +20,13 @@
       <i class="devicon-nodejs-plain-wordmark"></i>
       <p>Supervised Learning, Unsupervised Learning</p>
     </div>
+      
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>AWS, Tableau, Hadoop, Spark, Hive</p>
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+      <i class="devicon-mysql-plain-wordmark colored"></i>
+      <i class="devicon-postgresql-plain-wordmark colored"></i>
+      <p>AWS, Tableau, MySQL, Postgres, Hadoop, Spark, Hive</p>
     </div>
 </div>
