--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,21 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
+    <ul>
+      <li> Featured Skills</li>
+    </ul>
+    <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment</p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/Destiny-2-1080P-Wallpaper.jpg" | prepend: site.baseurl }}" />
@@ -14,29 +29,30 @@
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/Labor_Market-1.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Shoprunner.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project II </h3>
+    <h3> Shoprunner Customer Survival Analysis </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Yelp_Data_Challenge.PNG" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project III </h3>
+    <h3> Yelp Data Challenge </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <p> Converted raw Yelp review data (3.46G) to vector space for Natural Language Processing in Python (pandas, sklearn, tf-idf); Developed classification models (Logistic Regression, Naive Bayes, and Random Forest) based on restaurants’ ratings; Clustered users and identified the common users’ preferences by inspecting the cluster centroids</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
