--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,12 +6,12 @@
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
-    <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
+  <div class="contents-right">
+    <h3> IFA18 Soccer Player Transfer Value Prediction </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment</p>
+    <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment. </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
