--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,9 +7,9 @@
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> IFA18 Soccer Player Transfer Value Prediction </h3>
+    <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Cloud Application Development</li>
     </ul>
     <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment. </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
@@ -23,7 +23,7 @@
   <div class="contents">
     <h3> Destiny II Gaming Analytics </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Gaming Recommender System</li>
     </ul>
     <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
@@ -37,7 +37,7 @@
   <div class="contents-right">
     <h3> Shoprunner Customer Survival Analysis </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Repurchasing Analysis</li>
     </ul>
     <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
@@ -50,7 +50,7 @@
   <div class="contents">
     <h3> Yelp Data Challenge </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Text Analytics</li>
     </ul>
     <p> Converted raw Yelp review data (3.46G) to vector space for Natural Language Processing in Python (pandas, sklearn, tf-idf); Developed classification models (Logistic Regression, Naive Bayes, and Random Forest) based on restaurants’ ratings; Clustered users and identified the common users’ preferences by inspecting the cluster centroids</p>
     <a class="project-link" href="#">Check it out</a>
