--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <a aria-label="Send email" href="mailto:vincent_ziwen@outlook.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/ziwen-wang/"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/vincent9514"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Tableau Public" target="_blank" href="https://public.tableau.com/profile/vincent.wang1896#!/"><i class="icon fa fa-link" aria-hidden="true"></i></a>
         
       </div>
       <div class="header-links">
