--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,21 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> BP Driver Reward Customer Segmentation </h3>
+    <ul>
+      <li> Clustering and CLV Modeling</li>
+    </ul>
+    <p>Customer Segmentation: Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources; create end-user Tableau report for marketing team </p>
+    <p>Customer Lifetime Value (CLV): Build a dynamic CLV model to measure participants ongoing value in driver loyalty program </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
