--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,8 +11,7 @@
     <ul>
       <li> Clustering and CLV Modeling</li>
     </ul>
-    <p>Customer Segmentation: Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources; create end-user Tableau report for marketing team </p>
-    <p>Customer Lifetime Value (CLV): Build a dynamic CLV model to measure participants ongoing value in driver loyalty program </p>
+    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources; create end-user Tableau report for marketing team; Build a dynamic CLV model to measure participants ongoing value in driver loyalty program </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
