--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -72,14 +72,14 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project IV </h3>
+    <h3> BP </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> BP</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
