--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,20 +2,20 @@
   <h1> Featured Projects </h1>
 </div>
 
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
-    <h3> BP Driver Reward Customer Segmentation </h3>
+  <div class="contents-left">
+    <h3> BP </h3>
     <ul>
-      <li> Clustering and CLV Modeling</li>
+      <li> BP</li>
     </ul>
-    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources</p>
+    <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
-
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
