--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,18 +4,19 @@
 
 
 <div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-left">
-    <h3> BP </h3>
+  <div class="contents-right">
+    <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
     <ul>
-      <li> BP</li>
+      <li> Cloud Application Development</li>
     </ul>
-    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
