--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,10 +4,10 @@
 
 
 <div class="user-projects">
-  <div class="images-left">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-right">
+  <div class="contents-left">
     <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
     <ul>
       <li> Cloud Application Development</li>
