--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,7 +7,7 @@
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-left">
+  <div class="contents">
     <h3> FIFA18 Soccer Player Transfer Value Prediction </h3>
     <ul>
       <li> Cloud Application Development</li>
@@ -75,7 +75,7 @@
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-right">
+  <div class="contents">
     <h3> BP </h3>
     <ul>
       <li> BP</li>
