--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -75,7 +75,7 @@
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents-rights">
     <h3> BP </h3>
     <ul>
       <li> BP</li>
