--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -71,16 +71,17 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Shoprunner.png" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents-rights">
-    <h3> BP </h3>
+  <div class="contents-right">
+    <h3> Shoprunner Customer Survival Analysis </h3>
     <ul>
-      <li> BP</li>
+      <li> Repurchasing Analysis</li>
     </ul>
-    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction data along with geographical, competitor, and other external data sources</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
