--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -46,6 +46,34 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/Destiny-2-1080P-Wallpaper.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Destiny II Gaming Analytics </h3>
+    <ul>
+      <li> Gaming Recommender System</li>
+    </ul>
+    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/Shoprunner.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Shoprunner Customer Survival Analysis </h3>
+    <ul>
+      <li> Repurchasing Analysis</li>
+    </ul>
+    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/Yelp_Data_Challenge.PNG" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
