--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -46,7 +46,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Destiny-2-1080P-Wallpaper.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Destiny II Gaming Analytics </h3>
