--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,11 +49,13 @@
     <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Destiny II Gaming Analytics </h3>
+    <h3> BP Customer Segmentation </h3>
     <ul>
-      <li> Gaming Recommender System</li>
+      <li> Clustering and CLV Modeling</li>
     </ul>
-    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction
+    data along with geographical, competitor, and other external data sources; 
+    create end-user Tableau report for marketing team</p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
@@ -81,7 +83,8 @@
     <ul>
       <li> Text Analytics</li>
     </ul>
-    <p> Converted raw Yelp review data (3.46G) to vector space for Natural Language Processing in Python (pandas, sklearn, tf-idf); Developed classification models (Logistic Regression, Naive Bayes, and Random Forest) based on restaurants’ ratings; Clustered users and identified the common users’ preferences by inspecting the cluster centroids</p>
+    <p> Converted raw Yelp review data (3.46G) to vector space for Natural Language Processing in Python (pandas, sklearn, tf-idf); Developed classification models (Logistic Regression, Naive Bayes, and Random Forest) based on restaurants’ ratings; 
+    Clustered users and identified the common users’ preferences by inspecting the cluster centroids</p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
