--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -62,12 +62,12 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/Shoprunner.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/CBG.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Shoprunner Customer Survival Analysis </h3>
+    <h3> Rare Plants Visualization </h3>
     <ul>
-      <li> Repurchasing Analysis</li>
+      <li> Chicago Bontanic Garden</li>
     </ul>
     <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
