Update New Project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -91,14 +91,42 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/Shoprunner.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/US_Labor.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Shoprunner Customer Survival Analysis </h3>
+    <h3> U.S. Labor Market Intelligence </h3>
     <ul>
-      <li> Repurchasing Analysis</li>
+      <li> Spatial Visualizations and Correlations</li>
     </ul>
-    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
+    <p> Performed EDA on Greenwich.hr database to identify geospatial labor data for U.S. healthcare and IT labor markets. Created four interactive dashboards in Tableau to visualize job opportunities, salaries, regional affordability, and capital income. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/Grocery.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Corporación Favorita Grocery Sales Prediction</h3>
+    <ul>
+      <li> Predictive Analytics</li>
+    </ul>
+    <p> We analyzed grocery sales data from Corporación Favorita, a large Ecuadorian-based grocery retailer, and aimed to forecast products’ unit sales. After performing 11 different supervised learning models, we found that the random forest model demonstrated the best predicting power for unit sales. With our final model, we obtained the CV R2 as 0.7247, which demonstrates the effectiveness of our predictive modeling approach to predict grocery items’ unit sales. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/Zillow-Logo.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Zillow House Price Prediction </h3>
+    <ul>
+      <li> Kaggle Competition</li>
+    </ul>
+    <p> Performed feature engineering and visualization (shiny) given 59 features from 2.9M raw housing data in R. Optimized Zillow’s predictive models by fitting linear regression model and tree-based models (Random Forest, XGBoost). </p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
