--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -112,7 +112,7 @@
     <ul>
       <li> Predictive Analytics</li>
     </ul>
-    <p> We analyzed grocery sales data from Corporación Favorita, a large Ecuadorian-based grocery retailer, and aimed to forecast products’ unit sales. After performing 11 different supervised learning models, we found that the random forest model demonstrated the best predicting power for unit sales. With our final model, we obtained the CV R2 as 0.7247, which demonstrates the effectiveness of our predictive modeling approach to predict grocery items’ unit sales. </p>
+    <p> We analyzed grocery sales data from Corporación Favorita, a large Ecuadorian-based grocery retailer, and aimed to forecast products’ unit sales. After performing 11 different supervised learning models, we found that the random forest model demonstrated the best predicting power for unit sales.</p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
   </div>
 </div>
