--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
       <li> Gaming Recommender System</li>
     </ul>
     <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/22/Destiny.html">Check it out</a>
   </div>
 </div>
 
