--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
       <li> Cloud Application Development</li>
     </ul>
     <p>Developed AWS Web App using Flask Framework to predict FIFA18 Player Transfer Value. The web app was finally deployed on AWS Beanstalk environment. </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/23/FIFA18.html">Check it out</a>
   </div>
 </div>
 
