--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -25,7 +25,7 @@
     <ul>
       <li> Gaming Recommender System</li>
     </ul>
-    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
+    <p>Develop a hybrid content and knowledge based team-profile recommendation framework for player-versus- player (PvP) online            multiplayer shooter game Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie            Studio</p>
     <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/22/Destiny.html">Check it out</a>
   </div>
 </div>
@@ -39,8 +39,8 @@
     <ul>
       <li> Repurchasing Analysis</li>
     </ul>
-    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <p>Conducted discrete time survival analysis with logistic regression to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/24/Shoprunner.html">Check it out</a>
   </div>
 </div>
 
