--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -56,7 +56,7 @@
     <p>Apply clustering methods to segment customers based on purchasing patterns identified in transaction
     data along with geographical, competitor, and other external data sources; 
     create end-user Tableau report for marketing team</p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/25/BP.html">Check it out</a>
   </div>
 </div>
 
@@ -70,7 +70,7 @@
       <li> Chicago Bontanic Garden</li>
     </ul>
     <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://www.chicagobotanic.org/">Check it out</a>
   </div>
 </div>
 
