--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -85,7 +85,7 @@
     </ul>
     <p> Converted raw Yelp review data (3.46G) to vector space for Natural Language Processing in Python (pandas, sklearn, tf-idf); Developed classification models (Logistic Regression, Naive Bayes, and Random Forest) based on restaurants’ ratings; 
     Clustered users and identified the common users’ preferences by inspecting the cluster centroids</p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/26/Yelp.html">Check it out</a>
   </div>
 </div>
 
