--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -99,7 +99,7 @@
       <li> Spatial Visualizations and Correlations</li>
     </ul>
     <p> Performed EDA on Greenwich.hr database to identify geospatial labor data for U.S. healthcare and IT labor markets. Created four interactive dashboards in Tableau to visualize job opportunities, salaries, regional affordability, and capital income. </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/27/Labor.html">Check it out</a>
   </div>
 </div>
 
