--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -113,7 +113,7 @@
       <li> Predictive Analytics</li>
     </ul>
     <p> We analyzed grocery sales data from Corporación Favorita, a large Ecuadorian-based grocery retailer, and aimed to forecast products’ unit sales. After performing 11 different supervised learning models, we found that the random forest model demonstrated the best predicting power for unit sales.</p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/03/28/grocery.html">Check it out</a>
   </div>
 </div>
 
@@ -127,6 +127,6 @@
       <li> Kaggle Competition</li>
     </ul>
     <p> Performed feature engineering and visualization (shiny) given 59 features from 2.9M raw housing data in R. Optimized Zillow’s predictive models by fitting linear regression model and tree-based models (Random Forest, XGBoost). </p>
-    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/">Check it out</a>
+    <a class="project-link" href="https://www.kaggle.com/c/zillow-prize-1">Check it out</a>
   </div>
 </div>
