--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -69,7 +69,7 @@
     <ul>
       <li> Chicago Bontanic Garden</li>
     </ul>
-    <p>Conducted discrete time covariate analysis to predict customer repurchase likelihood on top 15 retailers from Shoprunner. </p>
+    <p>The Network Analysis and Visualization on Chicago Botanic Garden Plants of Concern (POC) program, which has monitored 283 endangered, threatened, and rare species at over 300 sites in 1,315 populations throughout the Chicago Wilderness region since their founding in 2000. </p>
     <a class="project-link" href="https://www.chicagobotanic.org/">Check it out</a>
   </div>
 </div>
