--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -65,9 +65,9 @@
     <img alt="mountains" src="{{ "/assets/img/CBG.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Rare Plants Visualization </h3>
+    <h3> Chicago Bontanic Garden - Visualization and Network Analysis </h3>
     <ul>
-      <li> Chicago Bontanic Garden</li>
+      <li> D3 and Tableau </li>
     </ul>
     <p>The Network Analysis and Visualization on Chicago Botanic Garden Plants of Concern (POC) program, which has monitored 283 endangered, threatened, and rare species at over 300 sites in 1,315 populations throughout the Chicago Wilderness region since their founding in 2000. </p>
     <a class="project-link" href="https://www.chicagobotanic.org/">Check it out</a>
