--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,12 +10,12 @@
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-html5-plain-wordmark colored"></i>
-      <p>Python, R, SQL, Java, C++, Javascript, Html </p>
+      <p>Python, R, SQL, Java, Hadoop, Spark, Hive, C++, Javascript-D3, Html </p>
         
     </div>
     <div class="tech">
-      <h2>Machine Learning</h2>
-      <p>Supervised Learning, Unsupervised Learning</p>
+      <h2>Coursework</h2>
+      <p>Predictive Analytics I-II (In-depth Machine Learning), Optimization and Heuristics, Data Mining (Clustering, Dimensionality Reduction, Recommender Systems, etc), Deep Learning (CNN and RNN), Analytics for Big Data (Hadoop, MapReduce, Spark, Hive, etc), Data Visualization (D3 and Tableau), Data Warehousing, Text Analytics </p>
     </div>
       
     <div class="tech">
@@ -24,6 +24,6 @@
       <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
       <i class="devicon-mysql-plain-wordmark colored"></i>
       <i class="devicon-postgresql-plain-wordmark colored"></i>
-      <p>AWS, Tableau, MySQL, Postgres, Hadoop, Spark, Hive</p>
+      <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive</p>
     </div>
 </div>
