--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,12 @@
       <h2>Coursework</h2>
       <p>Predictive Analytics I-II (In-depth Machine Learning)</p>
       <p>Optimization and Heuristics</p>
-      <p>Data Mining (Clustering, Dimensionality Reduction, Recommender Systems, etc), Deep Learning (CNN and RNN), Analytics for Big Data (Hadoop, MapReduce, Spark, Hive, etc), Data Visualization (D3 and Tableau), Data Warehousing, Text Analytics </p>
+      <p>Data Mining (Clustering, Dimensionality Reduction, Recommender Systems)</p>
+      <p>Deep Learning (CNN and RNN)</p>
+      <p>Analytics for Big Data (Hadoop, MapReduce, Spark, Hive, etc)</p>
+      <p>Data Visualization (D3 and Tableau)</p>
+      <p>Data Warehousing</p>
+      <p>Text Analytics </p>
     </div>
       
     <div class="tech">
