--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,12 +15,12 @@
     </div>
     <div class="tech">
       <h2>Coursework</h2>
-      <p>Predictive Analytics I-II (In-depth Machine Learning)</p>
+      <p>Predictive Analytics I-II</p>
       <p>Optimization and Heuristics</p>
-      <p>Data Mining (Clustering, Dimensionality Reduction, Recommender Systems)</p>
-      <p>Deep Learning (CNN and RNN)</p>
-      <p>Analytics for Big Data (Hadoop, MapReduce, Spark, Hive, etc)</p>
-      <p>Data Visualization (D3 and Tableau)</p>
+      <p>Data Mining</p>
+      <p>Deep Learning</p>
+      <p>Analytics for Big Data</p>
+      <p>Data Visualization</p>
       <p>Data Warehousing</p>
       <p>Text Analytics </p>
     </div>
