--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -70,8 +70,7 @@
       <li> D3 and Tableau </li>
     </ul>
     <p>The Network Analysis and Visualization on Chicago Botanic Garden Plants of Concern (POC) program, which has monitored 283 endangered, threatened, and rare species at over 300 sites in 1,315 populations throughout the Chicago Wilderness region since their founding in 2000. </p>
-    <a class="project-link" href="https://public.tableau.com/profile/vincent.wang1896#!/vizhome/finalproject_5_29_11_v10_42/species_story">Check it out</a>
-    <a class="project-link" href="https://public.tableau.com/profile/vincent.wang1896#!/vizhome/finalproject_5_29_11_v10_42/species_story">Check it out - 2</a>
+    <a class="project-link" href="https://public.tableau.com/profile/vincent.wang1896#!/vizhome/finalproject_5_29_11_v10_42/species_story">Dashboard</a>
   </div>
 </div>
 
