--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,20 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/AD_Poster.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Autonomous Driving - Object Detection and Segmentation</h3>
+    <ul>
+      <li> Deep Learning</li>
+    </ul>
+    <p>We utilized Mask R-CNN Model to detect and classify road objects in images captured by front-facing car cameras. We also developed our own script to evaluate the model based on IOU and MAP metricsWe specifically focused on 6 classes of objects: car, motorcycle, bicycle, pedestrian, truck, and bus. </p>
+    <a class="project-link" href="https://vincent9514.github.io/Type-on-Strap/2018/06/11/AD.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/FIFA18_background.jpg" | prepend: site.baseurl }}" />
   </div>
