Updated icon and sections

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,9 @@
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-html5-plain-wordmark colored"></i>
-      <p>Python, R, SQL, Java, Hadoop, Spark, Hive, C++, Javascript-D3, Html </p>
+      <i class="devicon-d3js-plain colored"></i>
+      <i class="devicon-docker-plain-wordmark colored"></i>
+      <p>Python, R, SQL, Java, Hadoop, Spark, Hive, C++, Javascript, HTML, D3.js, Docker  </p>
         
     </div>
     <div class="tech">
@@ -31,6 +33,8 @@
       <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
       <i class="devicon-mysql-plain-wordmark colored"></i>
       <i class="devicon-postgresql-plain-wordmark colored"></i>
-      <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive</p>
+      <i class="devicon-apache-line-wordmark colored"></i>
+      <i class="devicon-linux-plain colored"></i>
+      <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive, Apache, Linux, </p>
     </div>
 </div>
