try adding one more section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -37,4 +37,15 @@
       <i class="devicon-linux-plain colored"></i>
       <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive, Apache, Linux, </p>
     </div>
+   
+    <div class="tech">
+      <h2>Tools</h2>
+      <i class="devicon-git-plain"></i>
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+      <i class="devicon-mysql-plain-wordmark colored"></i>
+      <i class="devicon-postgresql-plain-wordmark colored"></i>
+      <i class="devicon-apache-line-wordmark colored"></i>
+      <i class="devicon-linux-plain colored"></i>
+      <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive, Apache, Linux, </p>
+    </div>
 </div>
