--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,19 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/oil.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Azure Digital Big Data Foundation </h3>
+    <ul>
+      <li> Cloud Data Pipeline Development</li>
+    </ul>
+    <p>Developed, orchestrated, and implemented a Azure based data ingestion platform that harmonized data from multiple sources with multiple formats using Hadoop Data Platform in Azure Cloud (Hortonworks, Event Hub, Docker, Kubernetes, Logic App). </p>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/AD_Poster.jpg" | prepend: site.baseurl }}" />
   </div>
@@ -63,7 +76,7 @@
     <img alt="mountains" src="{{ "/assets/img/BP.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> BP Customer Segmentation </h3>
+    <h3> Customer Segmentation </h3>
     <ul>
       <li> Clustering and CLV Modeling</li>
     </ul>
