add oil content

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,6 +12,7 @@
       <li> Cloud Data Pipeline Development</li>
     </ul>
     <p>Developed, orchestrated, and implemented a Azure based data ingestion platform that harmonized data from multiple sources with multiple formats using Hadoop Data Platform in Azure Cloud (Hortonworks, Event Hub, Docker, Kubernetes, Logic App). </p>
+    <p>Developed Neo4J graph database optimizes storage of multiple data source. Performed NLP and AI capabilities to discover data relations from legacy data warehouse. </p>
   </div>
 </div>
 
