--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,20 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Field Technician Virtual Agent </h3>
+    <ul>
+      <li> Chatbot Development and Web Scraping</li>
+    </ul>
+    <p>Worked with a Fortune 10 telecom to deliver virtual agents to production through integrating Watson Assistant, Service Orchestration Engine (Node.js), Cloudant DB, and client services (API and RPA) to improve field technician service efficiency and accuracy.</p>
+    <p>Developed web crawlers in Python (scrapy and splash) to automate data collection processes and enhance Watson capabilities. </p>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/oil.jpg" | prepend: site.baseurl }}" />
   </div>
@@ -11,7 +25,7 @@
     <ul>
       <li> Cloud Data Pipeline Development</li>
     </ul>
-    <p>Developed, orchestrated, and implemented a Azure based data ingestion platform that harmonized data from multiple sources with multiple formats using Hadoop Data Platform in Azure Cloud (Hortonworks, Event Hub, Docker, Kubernetes, Logic App). </p>
+    <p>Worked with a Fortune 5 oil and gas company to develop, orchestrate, and implement a Azure based data ingestion platform that harmonized data from multiple sources with multiple formats using Hadoop Data Platform in Azure Cloud (Hortonworks, Event Hub, Docker, Kubernetes, Logic App). </p>
     <p>Developed Neo4J graph database optimizes storage of multiple data source. Performed NLP and AI capabilities to discover data relations from legacy data warehouse. </p>
   </div>
 </div>
