add personal journey test

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,18 @@
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
+
+ <div class="user-details">
+  <h1> Journey so far </h1>
+  <p> {{site.user_description}} </p>
+</div>
+
+<div class="user-details">
+  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" />
+  <h4 class>Test</h4>
+  <p class>test</p>
+</div>
+
   <div class="user">
     <div class="tech">
       <h2>Programming</h2>
