--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="user-details">
-  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" />
+  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="42" width="42"/>
   <h4 class>Test</h4>
   <p class>test</p>
 </div>
