--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,10 +8,19 @@
   <p> {{site.user_description}} </p>
 </div>
 
-<div class="user-details">
-  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="42" width="42"/>
+<div class="user">
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="120" width="75"/>
   <h4 class>Test</h4>
   <p class>test</p>
+  </div>
+    
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="120" width="75"/>
+  <h4 class>Test</h4>
+  <p class>test</p>
+  </div>
+    
 </div>
 
   <div class="user">
