--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,22 +5,44 @@
 
  <div class="user-details">
   <h1> Journey so far </h1>
-  <p> {{site.user_description}} </p>
 </div>
 
 <div class="user">
+   
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="120" width="75"/>
-  <h4 class>Test</h4>
-  <p class>test</p>
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Airport Authority Hong Kong</h4>
+  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
+  <p class>XXXXXXXXXXXXXXXXXXX</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" height="120" width="75"/>
-  <h4 class>Test</h4>
-  <p class>test</p>
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Airport Authority Hong Kong</h4>
+  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
+  <p class>XXXXXXXXXXXXXXXXXXX</p>
   </div>
     
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Airport Authority Hong Kong</h4>
+  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
+  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  </div>
+    
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Airport Authority Hong Kong</h4>
+  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
+  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  </div>
+    
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Airport Authority Hong Kong</h4>
+  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
+  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  </div>
 </div>
 
   <div class="user">
