--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,35 +13,30 @@
   <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
   <h4 class>Airport Authority Hong Kong</h4>
   <p class>Data Science Intern - Mobile Application Analytics 2016</p>
-  <p class>XXXXXXXXXXXXXXXXXXX</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
-  <h4 class>Airport Authority Hong Kong</h4>
-  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
-  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  <img alt="mountains" src="{{ "/assets/img/audi_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>Audi</h4>
+  <p class>Analytics Intern - Audi Innovation Research (AIR) 2017</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
-  <h4 class>Airport Authority Hong Kong</h4>
-  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
-  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  <img alt="mountains" src="{{ "/assets/img/bp_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>BP North America</h4>
+  <p class>Data Science Practicum Consultant 2017</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
-  <h4 class>Airport Authority Hong Kong</h4>
-  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
-  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  <img alt="mountains" src="{{ "/assets/img/kpmg_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>KPMG US</h4>
+  <p class>Data Science Intern, Cognitive Lab - Lighthouse 2018</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
-  <h4 class>Airport Authority Hong Kong</h4>
-  <p class>Data Science Intern - Mobile Application Analytics 2016</p>
-  <p class>XXXXXXXXXXXXXXXXXXX</p>
+  <img alt="mountains" src="{{ "/assets/img/IBM_logo.png" | prepend: site.baseurl }}" height="150" width="150"/>
+  <h4 class>IBM Global Business Services</h4>
+  <p class>Sr. Data Scientist, Advanced Analytics - Distribution Industry 2019-Present </p>
   </div>
 </div>
 
