test adding certificate

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -76,3 +76,30 @@
       <p>AWS, Azure, Tableau, MySQL, Postgres, Hadoop, Spark, Hive, Apache, Linux, </p>
     </div>
 </div>
+
+  <div class="user">
+    <div class="tech">
+      <h2>Programming</h2>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-cplusplus-plain colored"></i>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
+      <i class="devicon-d3js-plain colored"></i>
+      <i class="devicon-docker-plain-wordmark colored"></i>
+      <p>Python, R, SQL, Java, Hadoop, Spark, Hive, C++, Javascript, HTML, D3.js, Docker  </p>
+        
+    </div>
+    <div class="tech">
+      <h2>Coursework</h2>
+      <p>Predictive Analytics I-II</p>
+      <p>Optimization and Heuristics</p>
+      <p>Data Mining</p>
+      <p>Deep Learning</p>
+      <p>Analytics for Big Data</p>
+      <p>Data Visualization</p>
+      <p>Data Warehousing</p>
+      <p>Text Analytics </p>
+    </div>
+      
+</div>
