--- a/_includes/about.html
+++ b/_includes/about.html
@@ -79,27 +79,16 @@
 
   <div class="user">
     <div class="tech">
-      <h2>Programming</h2>
-      <i class="devicon-python-plain-wordmark colored"></i>
-      <i class="devicon-java-plain-wordmark colored"></i>
-      <i class="devicon-cplusplus-plain colored"></i>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-html5-plain-wordmark colored"></i>
-      <i class="devicon-d3js-plain colored"></i>
-      <i class="devicon-docker-plain-wordmark colored"></i>
-      <p>Python, R, SQL, Java, Hadoop, Spark, Hive, C++, Javascript, HTML, D3.js, Docker  </p>
+      <h2>Certifications</h2>
+      <p>AWS Certified Developer - Associate </p>
+      <p>Azure Certified Specialist </p>
+      <p>Associate Certified Analytics Professional (INFORMS) </p>
+      <p>Lean Six Sigma - Green Belt </p>
         
     </div>
     <div class="tech">
-      <h2>Coursework</h2>
-      <p>Predictive Analytics I-II</p>
-      <p>Optimization and Heuristics</p>
-      <p>Data Mining</p>
-      <p>Deep Learning</p>
-      <p>Analytics for Big Data</p>
-      <p>Data Visualization</p>
-      <p>Data Warehousing</p>
-      <p>Text Analytics </p>
+      <h2>Publication</h2>
+      <p>A Team Based Player Versus Player Recommender Systems Framework For Player Improvement, in: NSW, Australia, ACSW, 2019 </p>
     </div>
       
 </div>
